--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -30,6 +30,6 @@ jobs:
           role-to-assume: ${{ inputs.role-to-assume }}
           aws-region: ${{ inputs.aws-region }}
       - name: Sync GitHub Repository to AWS CodeCommit
-        uses: topotal/aws-codecommit-sync-action@v1
+        uses: topotal/aws-codecommit-sync-action@0.2.1
         with:
           codecommit_url: ${{ inputs.codecommit_url }}
