--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -12,10 +12,6 @@ on:
       codecommit_url:
         required: true
         type: string
-      version:
-        required: false
-        type: string
-        default: 'main'
     secrets:
       token:
         required: true
@@ -34,6 +30,6 @@ jobs:
           role-to-assume: ${{ inputs.role-to-assume }}
           aws-region: ${{ inputs.aws-region }}
       - name: Sync GitHub Repository to AWS CodeCommit
-        uses: topotal/aws-codecommit-sync-action@${{ inputs.version }}
+        uses: topotal/aws-codecommit-sync-action@0.2.2
         with:
           codecommit_url: ${{ inputs.codecommit_url }}
